fixed nav spacing, added account placeholder

--- a/src/App.css
+++ b/src/App.css
@@ -64,6 +64,7 @@
 
 #NavBar {
   height: 10%;
+  margin-bottom: 10%;
 }
 
 #NavBar ul {
